--- a/workspace/address/pom.xml
+++ b/workspace/address/pom.xml
@@ -4,6 +4,10 @@
   <groupId>org.example</groupId>
   <artifactId>address</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
   <name>Archetype - address</name>
   <url>http://maven.apache.org</url>
   <dependencies>
