--- a/tax/src/main/resources/application.properties
+++ b/tax/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8989
 
-spring.datasource.url=jdbc:mysql://localhost:3306/contactdb
+spring.datasource.url=jdbc:mysql://localhost:3306/taxdb
 spring.datasource.username=root
 spring.datasource.password=
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
